feat: get buyer order detail api
