# api/docs/openapi.json
@@ -1793,6 +1793,54 @@
         ]
       }
     },
+    "/v1/buyer/order/{orderID}": {
+      "get": {
+        "description": "Get order detail of buyer",
+        "operationId": "get-order-of-buyer",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "orderID",
+            "required": true,
+            "schema": {
+              "format": "int64",
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Order"
+                }
+              }
+            },
+            "description": "OK"
+          },
+          "default": {
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorModel"
+                }
+              }
+            },
+            "description": "Error"
+          }
+        },
+        "security": [
+          {
+            "sessionId": []
+          }
+        ],
+        "summary": "Get order detail of buyer",
+        "tags": [
+          "Order"
+        ]
+      }
+    },
     "/v1/buyer/orders": {
       "get": {
         "description": "Get orders of buyer",
